src/passes/02-parsing/jsligo/Tests/contracts/negative/pattern_matching_anomalies/redundant_case/c1_c1_c2_c3.jsligo
type t = ["One", int] | ["Two", nat] | ["Three"]

let s = (x : t) : unit =>
  match(x, {
    One: (a) => unit,
    One: (b) => unit,
    Two: (c) => unit,
    Three: () => unit
  })
